# cabinet_api

./: .gitignore  LICENSE  README.md  alembic.ini  db_setup.py  pyproject.toml  requirements.txt  setup.cfg
alembic/: env.py
alembic/versions/: bfdeab0e9ca8_added_fruit_and_youtube_tables.py
config/: config.yaml.template  config_template.yaml
src/: api.py  api_fns.py  classes.py  constants.py  database.py  db_setup.py  wsgi.py
tests/: conftest.py  test_api.py  test_api_fns.py
