[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cabinet_api"
version = "0.0.1"
authors = [
  { name="Kathleen Noble", email="kitkat_kathleen@yahoo.com" },
]
description = "API for Cabinet, a flexible blob storage system"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["flask", "pyyaml", "pydantic","psycopg2"]

[project.urls]
"Homepage" = "https://github.com/paper-dragonfly/cabinet_api"
"Bug Tracker" = "https://github.com/paper-dragonfly/cabinet_api/issues"